@@ -2,9 +2,9 @@
 
 /**
 *
-* Module RSS Feed Class 
+* Module RSS Feed Class
 *
-* @copyright	http://www.impresscms.org/ The ImpressCMS Project 
+* @copyright	http://www.impresscms.org/ The ImpressCMS Project
 * @license		http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
 * @package	    core
 * @since		1.1
@@ -49,10 +49,13 @@ class IcmsFeed {
 	}
 
 	function render () {
+		global $xoopsLogger;
+		$xoopsLogger->disableLogger();
+
 		//header ('Content-Type:text/xml; charset='._CHARSET);
 		$xoopsOption['template_main'] = "db:system_rss.html";
 		$tpl = new XoopsTpl();
-		
+
 		$tpl->assign('channel_title', $this->title);
 		$tpl->assign('channel_link', $this->url);
 		$tpl->assign('channel_desc', $this->description);
